--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,24 +4,166 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000814;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000814;
     --foreground: #ededed;
   }
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.navcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  padding-bottom: 100px;
+  /* background: #ffff; */
+}
+
+.leftnav {
+  display: flex;
+  background: #204af8e5;
+  border-top: 2px solid white;
+  border-right: 2px solid white;
+  border-left: 2px solid white;
+  border-bottom: 4px solid white;
+  border-radius: 8px;
+  padding-left: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 26px;
+  gap: 60px;
+  align-items: center;
+}
+
+.discord {
+  background: #7b61ff;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 4px solid white;
+  border-radius: 12px;
+  padding-left: 18px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 18px;
+  cursor: pointer;
+}
+
+.button-nav {
+  display: flex;
+  gap: 4.81px;
+}
+
+.button-nav-text {
+  font-size: 15px;
+  color: #cdcdcd;
+  font-weight: 400;
+  font-family: var(--font-neue-mon), sans-serif;
+}
+
+.side-buttons {
+  display: flex;
+  gap: 32.08px;
+}
+
+.mainpage {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.twobutton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.lauchapp {
+  background: black;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 4px solid white;
+  border-radius: 12px;
+  padding-left: 16px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-right: 16px;
+  display: flex;
+  gap: 8px;
+  font-size: 16px;
+  font-family: var(--font-neue-mon), sans-serif;
+}
+
+.designtext {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.designone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.animatelogo {
+  margin-top: 70px;
+}
+
+.footercontainer {
+  display: flex;
+  padding-top: 120px;
+  justify-content: center;
+  flex-direction: column;
+  font-family: var(--font-neue-mon), sans-serif;
+  gap: 30px;
+}
+
+.twoinfo {
+  display: flex;
+  justify-content: space-between;
+}
+
+.copy {
+  display: flex;
+  font-size: 16.04px;
+  font-family: var(--font-neue-mon), sans-serif;
+  justify-content: center;
+}
+
+.footer-left {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.dx {
+  font-family: var(--font-dx-mon), sans-serif;
 }
