--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,3 +167,179 @@ body {
 .dx {
   font-family: var(--font-dx-mon), sans-serif;
 }
+
+.boxone {
+  display: flex;
+  border-top: 1.35px solid white;
+  background: #121925;
+
+  align-items: flex-start;
+  border-right: 2px solid white;
+  border-left: 1.35px solid white;
+  border-bottom: 4px solid white;
+  border-radius: 6px;
+  height: 70%;
+  width: 30%;
+}
+
+.inner-boxone {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 20px;
+  width: 85%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  gap: 10px;
+}
+
+.analyticsbox {
+  font-family: var(--font-dx-mon), sans-serif;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.databox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 4px;
+  width: 100%;
+  font-family: var(--font-neue-mon), sans-serif;
+  font-size: 12px;
+  color: #a39d9d;
+  min-height: 150px;
+  background: #171a35;
+}
+
+.nodata {
+  font-family: var(--font-neue-mon), sans-serif;
+  font-size: 12px;
+  color: #a39d9d;
+  text-align: center;
+  padding-top: 20px;
+}
+.cards {
+  display: flex;
+  background: #204af8e5;
+  font-family: var(--font-neue-mon), sans-serif;
+
+  align-items: center;
+  gap: 2px;
+  border: 1px solid white;
+  padding: 7.5px;
+  border-radius: 4px;
+  width: 40%;
+}
+
+.trades {
+  font-family: var(--font-dx-mon), sans-serif;
+}
+
+.brownbox {
+  display: flex;
+  border: 1.5px solid white;
+  border-radius: 4px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 2px;
+  padding-right: 2px;
+  background: #392c24;
+  justify-content: space-between;
+  align-items: center;
+  font-family: var(--font-neue-mon), sans-serif;
+  font-size: 12px;
+}
+
+.boxtwo {
+  display: flex;
+  background: #121925;
+  position: relative;
+  border-top: 1.35px solid white;
+  border-right: 2px solid white;
+  border-left: 1.35px solid white;
+  border-bottom: 4px solid white;
+  border-radius: 6px;
+  height: 70%;
+  width: 40%;
+}
+
+.toggle {
+  font-family: var(--font-dx-mon), sans-serif;
+  position: absolute;
+  display: flex;
+  padding: 8px;
+  width: 65%;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 4px solid white;
+  border-radius: 10px;
+  background: #171a35;
+  align-items: center;
+  justify-content: center;
+  left: 8px;
+  top: -25px;
+  gap: 20px;
+}
+
+.depo {
+  padding-left: 25px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 25px;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 1px solid #ffffff;
+  background: #204af8e5;
+  border-radius: 10px;
+}
+
+.slip {
+  position: absolute;
+  background: #204af8e5;
+  top: -25px;
+
+  right: 8px;
+  font-family: var(--font-dx-mon), sans-serif;
+  display: flex;
+  gap: 2px;
+  border-radius: 12px;
+  padding-left: 16px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-right: 16px;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 4px solid white;
+}
+
+.boxdif {
+  margin-top: 60px;
+  margin-left: 22px;
+  padding: 12px;
+  height: 30%;
+  width: 90%;
+  border-radius: 6px;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 4px solid white;
+}
+.boxdi {
+  margin-top: 20px;
+  margin-left: 22px;
+  padding: 12px;
+  height: 30%;
+  width: 90%;
+  border-radius: 6px;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 4px solid white;
+}
